--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,302 +1,2 @@
-absl-py==0.8.1
-aioredis==1.2.0
-alabaster==0.7.12
-arrow==0.14.2
-asgi-redis==0.14.1
-asgiref==0.14.0
-asn1crypto==1.3.0
-astor==0.8.0
-astroid==2.3.3
-astropy==4.0.1.post1
-async-timeout==3.0.1
-atomicwrites==1.3.0
-attrs==19.3.0
-autobahn==0.16.0
-Automat==0.7.0
-autopep8==1.4.4
-Babel==2.8.0
-backcall==0.1.0
-backports.functools-lru-cache==1.6.1
-backports.os==0.1.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-beautifulsoup4==4.9.0
-binaryornot==0.4.4
-bitarray==1.2.1
-bkcharts==0.2
-bleach==3.1.4
-bokeh==2.0.2
-boto==2.49.0
-Bottleneck==1.3.2
-cached-property==1.5.1
-certifi==2020.4.5.1
-cffi==1.14.0
-channels==0.17.3
-channels-redis==2.4.0
-chardet==3.0.4
-click==7.1.1
-cloudpickle==1.4.0
-clyent==1.2.2
-colorama==0.3.7
-comtypes==1.1.7
-conda==4.8.3
-conda-build==3.18.11
-conda-package-handling==1.6.0
-conda-verify==3.4.2
-constantly==15.1.0
-contextlib2==0.5.4
-cookiecutter==1.6.0
-cryptography==2.8
-cssselect==1.0.3
-cycler==0.10.0
-Cython==0.29.17
-cytoolz==0.10.1
-daphne==0.14.3
-dask==2.15.0
-decorator==4.4.2
-defusedxml==0.6.0
-distributed==2.15.0
-dj-database-url==0.4.1
-Django==1.11.2
-django-idmap==1.0.3
-django-model-utils==3.2.0
-django-vanilla-views==1.0.4
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
-fake-useragent==0.1.11
-fastcache==1.1.0
-feather-format==0.4.0
-filelock==3.0.12
-Flask==1.1.2
-fsspec==0.7.1
-future==0.18.2
-gast==0.2.2
-gevent==1.4.0
-glob2==0.7
-google-pasta==0.1.7
-graphviz==0.11
-greenlet==0.4.15
-grpcio==1.24.3
-gym==0.15.3
-h11==0.9.0
-h2==3.1.1
-h5py==2.10.0
-HeapDict==1.0.1
-heroku==0.1.4
-hiredis==1.0.0
-honcho==0.7.1
-hpack==3.0.0
-html5lib==1.0.1
-huey==1.10.2
-Hypercorn==0.8.1
-hyperframe==5.2.0
-hyperlink==19.0.0
-hypothesis==5.8.3
-idna==2.9
-imageio==2.8.0
-imagesize==1.2.0
-importlib-metadata==1.5.0
-incremental==17.5.0
-IPy==0.83
-ipykernel==5.1.4
-ipython==7.13.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.17.0
-Jinja2==2.11.2
-jinja2-time==0.2.0
-joblib==0.14.1
-json5==0.9.4
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-jupyterlab==1.2.6
-jupyterlab-server==1.1.1
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-keyring==21.1.1
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-linearmodels==4.13
-llvmlite==0.29.0
-locket==0.2.0
-lxml==4.5.0
-Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==3.1.3
-mccabe==0.6.1
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-mock==4.0.2
-more-itertools==8.2.0
-mpld3==0.3
-mpmath==1.1.0
-msgpack==1.0.0
-msgpack-python==0.4.8
-multipledispatch==0.6.0
-mypy-extensions==0.4.1
-navigator-updater==0.2.1
-nbconvert==5.6.1
-nbformat==5.0.4
-networkx==2.4
-nltk==3.4.5
-nose==1.3.7
-notebook==6.0.3
-numba==0.45.1
-numexpr==2.7.1
-numpy==1.18.4
-numpydoc==0.9.2
-olefile==0.46
-openpyxl==3.0.3
-opt-einsum==3.1.0
-otree==2.1.41
-otree-boto2-shim==0.3.2
-otree-core==0.0.0b1
-otree-save-the-change==1.1.3
-packaging==20.3
-pandas==1.0.3
-pandocfilters==1.4.2
-parso==0.7.0
-partd==1.1.0
-path.py==12.0.1
-pathlib2==2.3.5
-patsy==0.5.1
-pbr==1.10.0
-pep8==1.7.1
-pickleshare==0.7.5
-Pillow==7.1.2
-pkginfo==1.5.0.1
-pluggy==0.13.1
-ply==3.11
-poyo==0.4.2
-priority==1.3.0
-prometheus-client==0.7.1
-prompt-toolkit==3.0.4
-protobuf==3.10.0
-psutil==5.7.0
-py==1.4.31
-pyarrow==0.13.0
-pyasn1==0.4.7
-pyasn1-modules==0.2.6
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.20
-pycrypto==2.6.1
-pycurl==7.43.0.3
-pyflakes==2.2.0
-pyglet==1.3.2
-Pygments==2.6.1
-PyHamcrest==1.9.0
-pylint==2.4.4
-pyodbc===4.0.0-unsupported
-pyOpenSSL==19.1.0
-pyparsing==2.4.7
-pyreadline==2.1
-pyrsistent==0.16.0
-PySocks==1.7.1
-pytest==5.4.2
-pytest-arraydiff==0.3
-pytest-astropy==0.8.0
-pytest-astropy-header==0.1.2
-pytest-django==3.0.0
-pytest-doctestplus==0.5.0
-pytest-openfiles==0.5.0
-pytest-remotedata==0.3.2
-python-dateutil==2.8.1
-python-redis-lock==3.3.1
-pytz==2017.3
-PyWavelets==1.1.1
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==18.1.1
-QtAwesome==0.7.0
-qtconsole==4.7.3
-QtPy==1.9.0
-raven==6.9.0
-redis==2.10.5
-requests==2.11.1
-rope==0.16.0
-ruamel-yaml==0.15.87
-schema==0.6.2
-scikit-image==0.16.2
-scikit-learn==0.22.1
-scipy==1.4.1
-seaborn==0.10.1
-selenium==3.141.0
-Send2Trash==1.5.0
-sentry-sdk==0.7.9
-service-identity==18.1.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-snowballstemmer==2.0.0
-sortedcollections==1.1.2
-sortedcontainers==2.1.0
-soupsieve==2.0
-Sphinx==3.0.3
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport==1.2.1
-spyder==3.3.6
-spyder-kernels==0.5.1
-SQLAlchemy==1.3.16
-sqlparse==0.3.0
-statsmodels==0.11.0
-sympy==1.5.1
-tables==3.6.1
-tblib==1.6.0
-tensorboard==1.15.0
-tensorflow==1.15.0
-tensorflow-estimator==1.15.1
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-toml==0.10.0
-toolz==0.10.0
-tornado==6.0.4
-tqdm==4.45.0
-traitlets==4.3.3
-Twisted==16.2.0
-txaio==2.5.1
-typed-ast==1.4.0
-typing-extensions==3.7.4.1
-unicodecsv==0.14.1
-urllib3==1.25.8
-wcwidth==0.1.9
-webencodings==0.5.1
-Werkzeug==1.0.1
-whichcraft==0.5.2
-whitenoise==3.2.1
-widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.12.1
-ws4py==0.3.5
-wsproto==0.14.1
-xlrd==1.2.0
-XlsxWriter==0.9.3
-xlwings==0.18.0
-xlwt==1.3.0
-xmltodict==0.12.0
-zict==2.0.0
-zipp==3.1.0
-zope.interface==4.2.0
+otree==2.4.1
+numpy=1.17.1
